--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,8 @@ main {
 .about-info {
   display: grid;
   grid-gap: 30px;
-  grid-template-areas: 'bioimage bio bio' 'job1 job2 job3';
+  grid-template-areas: 'bioimage bio bio'
+ 'job1 job2 job3';
   grid-template-columns: repeat(3, 1fr); }
   .about-info .bio-image {
     grid-area: bioimage;
@@ -184,6 +185,7 @@ main {
     border-bottom: #2196F3 5px solid; }
 
 .projects {
+
   display: grid;
   grid-gap: 0.7rem;
   grid-template-columns: repeat(3, 1fr); }
@@ -215,7 +217,7 @@ main {
         color: #000; }
 
 .btn, .btn-dark, .btn-light {
-  display: block;
+  display: grid;
   padding: 0.5rem 1rem;
   border: 0;
   margin-bottom: 0.3rem; }
@@ -273,7 +275,11 @@ main {
       width: 150px;
       height: 150px; }
   .about-info {
-    grid-template-areas: 'bioimage' 'bio' 'job1' 'job2' 'job3';
+    grid-template-areas: 'bioimage'
+ 'bio'
+ 'job1'
+ 'job2'
+ 'job3';
     grid-template-columns: 1fr; }
   .projects {
     grid-template-columns: repeat(2, 1fr); } }
@@ -324,6 +330,7 @@ input {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
 
 textarea {
+  color:#fff;
   margin-bottom: 1.25em;
   height: 100%;
   border: 3px solid #2196F3;
@@ -341,3 +348,25 @@ button {
   border: none;
   width: 100px;
   height: 100px; }
+
+  #myVideo {
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    min-width: 100%; 
+    min-height: 100%;
+  }
+  .content {
+    position: relative;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    color: #f1f1f1;
+    width: 100%;
+    height: 20%;
+    padding: 20px;
+}
+.card{
+  text-align: center;
+  display:none;
+  border: 3px #2196F3 solid;
+}
